# cartomancer

./: .cartomancer.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/cartomancer-core/: Cargo.toml  README.md
crates/cartomancer-core/src/: config.rs  diff.rs  error.rs  finding.rs  lib.rs  review.rs  severity.rs
crates/cartomancer-github/: Cargo.toml  README.md
crates/cartomancer-github/src/: client.rs  diff.rs  lib.rs  types.rs  webhook.rs
crates/cartomancer-graph/: Cargo.toml  README.md
crates/cartomancer-graph/src/: enricher.rs  escalator.rs  lib.rs
crates/cartomancer-server/: Cargo.toml  README.md
crates/cartomancer-server/src/: cli.rs  comment.rs  config.rs  doctor.rs  init_template.toml  main.rs  opengrep.rs  path_security.rs  pipeline.rs  semgrep.rs  webhook.rs
crates/cartomancer-server/src/llm/: anthropic.rs  mod.rs  ollama.rs
crates/cartomancer-server/tests/: pipeline_integration.rs
crates/cartomancer-store/: Cargo.toml  README.md
crates/cartomancer-store/src/: fingerprint.rs  lib.rs  schema.rs  store.rs  types.rs
docs/: architecture.md  product.md  structure.md  tech.md
examples/demo/: README.md  demo.tape
examples/demo/fixture/: .cartog.db  .cartomancer.toml
examples/demo/fixture/src/: __init__.py  auth.py  db.py  payments.py  utils.py  web.py
scripts/: release.sh
site/: index.html  style.css  usage.html
