[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/jrollin/cartomancer"

[workspace.dependencies]
# Internal crates
cartomancer-core = { path = "crates/cartomancer-core", version = "0.3.1" }
cartomancer-graph = { path = "crates/cartomancer-graph", version = "0.3.1" }
cartomancer-github = { path = "crates/cartomancer-github", version = "0.3.1" }
cartomancer = { path = "crates/cartomancer-server", version = "0.3.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Code graph
cartog = "0.10"

# Async trait
async-trait = "0.1"

# Config
toml = { version = "1.1", default-features = false, features = ["parse"] }

# Testing
tempfile = "3"

[profile.release]
lto = "thin"
strip = "debuginfo"

# opt-level=1 because tree-sitter C grammars (via cartog) compile slowly at default level=0
[profile.dev]
opt-level = 1
