[package]
name = "cartomancer"
description = "PR review tool with blast radius awareness — opengrep + cartog + LLM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartomancer-core = { workspace = true }
cartomancer-graph = { workspace = true }
cartomancer-github = { workspace = true }
cartomancer-store = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
tower = { workspace = true }
wiremock = { workspace = true }
