[package]
name = "cartomancer-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite persistence layer for cartomancer scan results"

[dependencies]
cartomancer-core = { workspace = true }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
